# mrfreeze

./: .envrc  .gitignore  .tool-versions  README.md  mrfreeze.py  package-lock.json  package.json  pyproject.toml
sessions/: vc_outreach.yaml
src/: apify.py  batteries.py  company_search.py  db.py  helpers.py  map_reduce_example.py  rocketreach_api.py  rocketreach_title_search_ranker.py  send_emails.py  sessions.py  test_openai.py
src/rocketreach/: rocketreach_openapi_spec.json  rocketreach_openapi_spec_v3.json
src/rocketreach/api/: README.md  requirements.txt  setup.py
src/rocketreach/api/.openapi-generator/: FILES
src/rocketreach/api/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
web/: README.md  fly.toml  package-lock.json  package.json
web/app/: entry.client.tsx  entry.server.tsx  root.tsx  stylesheet.css  utils.server.ts
web/app/routes/: _index.tsx  header_simple.tsx  send_email.$sessionId.tsx  session_company.$sessionCompanyId.tsx  sessions.$id.$pageNum.tsx  sessions.$id.tsx  sessions.$sessionId._index.tsx  sessions.$sessionId.company.$companyPageNum.person.$personPageNum.tsx  sessions.$sessionId.tsx  sessions.new.tsx
web/app/utils/: people_utils.ts
web/prisma/: schema.prisma  seed.ts
web/prisma/migrations/20230704183158_initial_migration/: migration.sql
web/prisma/migrations/20230704183658_add_person/: migration.sql
web/prisma/migrations/20230704185508_add_person_associations/: migration.sql
web/prisma/migrations/20230704190222_add_rocket_reach_id/: migration.sql
(+157 files in other folders)
